objects/SLCA2__CA_Calendar__c.object
<CustomObject>
    <description>main CalendarAnything settings object</description>
    <fields>
        <fullName>SLCA2__activeAdvancedFilterSection__c</fullName>
        <label>activeAdvancedFilterSection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__allowEditEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allowEditEvents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLCA2__calendarOption__c</fullName>
        <label>calendarOption</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__conditionalColoringSettings__c</fullName>
        <label>conditionalColoringSettings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__eventColor__c</fullName>
        <defaultValue>"rgb(50, 146, 98)"</defaultValue>
        <label>eventColor</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__eventEndFieldName__c</fullName>
        <label>eventEndFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__eventGroupByFieldName__c</fullName>
        <label>eventGroupByFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__eventLabelFieldName__c</fullName>
        <defaultValue>"name"</defaultValue>
        <label>eventLabelFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__eventStartFieldName__c</fullName>
        <defaultValue>"createddate"</defaultValue>
        <label>eventStartFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__filterAdvancedMask__c</fullName>
        <label>filterAdvancedMask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__filterAdvancedSettings__c</fullName>
        <label>filterAdvancedSettings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__friendlyName__c</fullName>
        <defaultValue>""</defaultValue>
        <externalId>true</externalId>
        <label>friendlyName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLCA2__iCalToken__c</fullName>
        <label>iCalToken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__ownershipFilter__c</fullName>
        <label>ownershipFilter</label>
        <picklist>
            <picklistValues>
                <fullName>all</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>my</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLCA2__targetObjectName__c</fullName>
        <defaultValue>"account"</defaultValue>
        <description>Name of target Calendar object</description>
        <inlineHelpText>Name of target Calendar object</inlineHelpText>
        <label>targetObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__wideFilterAdvancedSettings__c</fullName>
        <label>wideFilterAdvancedSettings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CA_Calendar</label>
    <listViews>
        <fullName>SLCA2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CA_Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_Calendar</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SLCA2__calendarEmptyName</fullName>
        <active>true</active>
        <description>Name of Calendar are not be empty.</description>
        <errorConditionFormula>LEN(Name) == 0</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name of Calendar are not be empty.</errorMessage>
    </validationRules>
</CustomObject>